egate-playbook/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # tên của deployment
  name: deployapp
spec:
  # số POD tạo ra
  replicas: 1
  # thiết lập các POD do deploy quản lý, là POD có nhãn  "app=deployapp"
  selector:
    matchLabels:
      app: deployapp
  # Định nghĩa mẫu POD, khi cần Deploy sử dụng mẫu này để tạo Pod
  template:
    metadata:
      name: podapp
      labels:
        app: deployapp
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: mysql
        image: "mysql:5.6"
        ports: 
          - containerPort: 3306
        resources:
          limits:
            memory: "300Mi"
            cpu: "100m"
      # - name: node
      #   #image: vcats/egate-api:1.1.4
      #   image: phpmyadmin:fpm-alpine
      #   resources:
      #     limits:
      #       memory: "100Mi"
      #       cpu: "100m"
      #   ports:
      #     - containerPort: 8080
        # env: 
        #   - name: MONGOURI
        #     value: "mongodb://admin:123asdCat@mongo-0.mongo:27017,mongo-1.mongo:27017/fintestsystem?authSource=fintestsystem&readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false"

      # - name: mongo
      #   image: mongo
      #   command: ["/bin/sh"]
      #   args: ["-c", "mongod --replSet=rs0 --bind_ip_all"]
      #   env:
      #     - name: MONGO_INITDB_ROOT_USERNAME
      #       value: "admin"
      #     - name: MONGO_INITDB_ROOT_PASSWORD
      #       value: "123asd"
      #   resources:
      #     limits:
      #       memory: "200Mi"
      #       cpu: "200m"
      #   ports:
      #     - containerPort: 27017

      # - name: nginx
      #   #image: kasmweb/firefox-mobile:1.10.0-rolling
      #   #image: jlesage/firefox
      #   image: nginx
      #   resources:
      #     limits:
      #       memory: "300Mi"
      #       cpu: "300m"
      #   # command: ["/bin/bash"]
      #   # args: ["-c", "while true; do echo 'busybox running'; sleep 10;done"]
      #   env: 
      #     - name: VNC_PW
      #       value: "admin"
      #   ports:
      #     - containerPort: 80
