egate-playbook/sv-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo 
  type: ClusterIP
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
